Scrolling display works.